--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase-admin": "^11.11.0",
     "mongodb": "^4.1.3",
-    "node-cron": "^3.0.2"
+    "node-cron": "^3.0.2",
+    "nodemon": "^3.0.1"
   }
 }
